make a button, a search input, a form and link them with the fetch request

--- a/input/index.html
+++ b/input/index.html
@@ -7,6 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
+<form>
+  <label for="locationSearch">seach the location</label>
+  <input type="search" id="locationSearch">
+  <button type="button">search</button>
+</form>
+
+
 <body>
 </body>
 
