make a function to get the following days

--- a/input/index.html
+++ b/input/index.html
@@ -13,6 +13,31 @@
   <button type="button">search</button>
 </form>
 
+<main>
+
+  <article>
+    <p>location: <span></span></p>
+  </article>
+
+  <article>
+    <p> current temperature: <span id='temperature'></span> </p>
+  </article>
+
+
+
+  <article>
+    <div>
+      <p><span id='temperature'></span></p>
+    </div>
+    <div>
+      <p><span id='temperature'></span></p>
+    </div>
+    <div>
+      <p><span id='temperature'></span></p>
+    </div>
+  </article>
+
+</main>
 
 <body>
 </body>
