display the following days

--- a/index.html
+++ b/index.html
@@ -5,7 +5,39 @@
   <title>the weather!</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="main-e44c09d1c19bf232ed76.js"></script></head>
+<script defer src="main-dbe9813789ca2741f382.js"></script></head>
+
+<form>
+  <label for="locationSearch">seach the location</label>
+  <input type="search" id="locationSearch">
+  <button type="button">search</button>
+</form>
+
+<main>
+
+  <article>
+    <p>location: <span></span></p>
+  </article>
+
+  <article>
+    <p> current temperature: <span id='temperature'></span> </p>
+  </article>
+
+
+
+  <article>
+    <div>
+      <p><span id='temperature'></span></p>
+    </div>
+    <div>
+      <p><span id='temperature'></span></p>
+    </div>
+    <div>
+      <p><span id='temperature'></span></p>
+    </div>
+  </article>
+
+</main>
 
 <body>
 </body>
