--- a/input/index.html
+++ b/input/index.html
@@ -21,6 +21,8 @@
 
   <article>
     <p> current temperature: <span id='temperature'></span> </p>
+    <p> feels like: <span id='temperature'></span> </p>
+    <button>switch to Celsius</button>
   </article>
 
 
