fix html because I don't have the third day available in the weather api

--- a/input/index.html
+++ b/input/index.html
@@ -20,6 +20,7 @@
   </article>
 
   <article>
+    <h2>today:</h2>
     <p> current temperature: <span id='temperature'></span> </p>
     <p> feels like: <span id='temperature'></span> </p>
     <button>switch to Celsius</button>
@@ -28,9 +29,6 @@
 
 
   <article>
-    <div>
-      <p><span id='temperature'></span></p>
-    </div>
     <div>
       <p><span id='temperature'></span></p>
     </div>
