--- a/output/index.html
+++ b/output/index.html
@@ -5,7 +5,7 @@
   <title>the weather!</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="main-c82862ac6812f8e533d4.js"></script></head>
+<script defer src="main-70f3c36cc740b6234aa3.js"></script></head>
 
 <form>
   <label for="locationSearch">seach the location</label>
@@ -20,15 +20,15 @@
   </article>
 
   <article>
+    <h2>today:</h2>
     <p> current temperature: <span id='temperature'></span> </p>
+    <p> feels like: <span id='temperature'></span> </p>
+    <button>switch to Celsius</button>
   </article>
 
 
 
   <article>
-    <div>
-      <p><span id='temperature'></span></p>
-    </div>
     <div>
       <p><span id='temperature'></span></p>
     </div>
