make the json data more understandable and improve the html structure

--- a/input/index.html
+++ b/input/index.html
@@ -21,8 +21,22 @@
 
   <article>
     <h2>today:</h2>
-    <p> current temperature: <span id='temperature'></span> </p>
-    <p> feels like: <span id='temperature'></span> </p>
+    <dl>
+      <dt>average humidity</dt>
+      <dd data-avgHumidity='day1'></dd>
+      <dt>
+        Average Temperature
+      </dt>
+      <dd data-avgTemp='day1'></dd>
+      <dt>
+        Minimum Temperature
+      </dt>
+      <dd data-minTemp='day1'></dd>
+      <dt>
+        Maximum Temperature
+      </dt>
+      <dd data-maxTemp='day1'></dd>
+    </dl>
     <button>switch to Celsius</button>
   </article>
 
@@ -31,9 +45,42 @@
   <article>
     <div>
       <p><span id='temperature'></span></p>
+      <dl>
+        <dt>average humidity</dt>
+        <dd data-avgHumidity='day2'></dd>
+        <dt>
+          Average Temperature
+        </dt>
+        <dd data-avgTemp='day2'></dd>
+        <dt>
+          Minimum Temperature
+        </dt>
+        <dd data-minTemp='day2'></dd>
+        <dt>
+          Maximum Temperature
+        </dt>
+        <dd data-maxTemp='day2'></dd>
+      </dl>
     </div>
+
     <div>
       <p><span id='temperature'></span></p>
+      <dl>
+        <dt>average humidity</dt>
+        <dd data-avgHumidity='day3'></dd>
+        <dt>
+          Average Temperature
+        </dt>
+        <dd data-avgTemp='day3'></dd>
+        <dt>
+          Minimum Temperature
+        </dt>
+        <dd data-minTemp='day3'></dd>
+        <dt>
+          Maximum Temperature
+        </dt>
+        <dd data-maxTemp='day3'></dd>
+      </dl>
     </div>
   </article>
 
