--- a/output/index.html
+++ b/output/index.html
@@ -5,7 +5,7 @@
   <title>the weather!</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="main-70f3c36cc740b6234aa3.js"></script></head>
+<script defer src="main-a527103a9a8a58aa25ff.js"></script></head>
 
 <form>
   <label for="locationSearch">seach the location</label>
@@ -21,8 +21,22 @@
 
   <article>
     <h2>today:</h2>
-    <p> current temperature: <span id='temperature'></span> </p>
-    <p> feels like: <span id='temperature'></span> </p>
+    <dl>
+      <dt>average humidity</dt>
+      <dd data-avgHumidity='day1'></dd>
+      <dt>
+        Average Temperature
+      </dt>
+      <dd data-avgTemp='day1'></dd>
+      <dt>
+        Minimum Temperature
+      </dt>
+      <dd data-minTemp='day1'></dd>
+      <dt>
+        Maximum Temperature
+      </dt>
+      <dd data-maxTemp='day1'></dd>
+    </dl>
     <button>switch to Celsius</button>
   </article>
 
@@ -31,9 +45,42 @@
   <article>
     <div>
       <p><span id='temperature'></span></p>
+      <dl>
+        <dt>average humidity</dt>
+        <dd data-avgHumidity='day2'></dd>
+        <dt>
+          Average Temperature
+        </dt>
+        <dd data-avgTemp='day2'></dd>
+        <dt>
+          Minimum Temperature
+        </dt>
+        <dd data-minTemp='day2'></dd>
+        <dt>
+          Maximum Temperature
+        </dt>
+        <dd data-maxTemp='day2'></dd>
+      </dl>
     </div>
+
     <div>
       <p><span id='temperature'></span></p>
+      <dl>
+        <dt>average humidity</dt>
+        <dd data-avgHumidity='day3'></dd>
+        <dt>
+          Average Temperature
+        </dt>
+        <dd data-avgTemp='day3'></dd>
+        <dt>
+          Minimum Temperature
+        </dt>
+        <dd data-minTemp='day3'></dd>
+        <dt>
+          Maximum Temperature
+        </dt>
+        <dd data-maxTemp='day3'></dd>
+      </dl>
     </div>
   </article>
 
