display temperature on html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>the weather!</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="main-a527103a9a8a58aa25ff.js"></script></head>
+<script defer src="main-faf6736e7f8d2763ed68.js"></script></head>
 
 <form>
   <label for="locationSearch">seach the location</label>
@@ -37,7 +37,7 @@
       </dt>
       <dd data-maxTemp='day1'></dd>
     </dl>
-    <button>switch to Celsius</button>
+    <button>switch to Fahrenheit</button>
   </article>
 
 
