display temperature on html

--- a/input/index.html
+++ b/input/index.html
@@ -37,7 +37,7 @@
       </dt>
       <dd data-maxTemp='day1'></dd>
     </dl>
-    <button>switch to Celsius</button>
+    <button>switch to Fahrenheit</button>
   </article>
 
 
