display the condition

--- a/input/index.html
+++ b/input/index.html
@@ -21,6 +21,10 @@
 
   <article>
     <h2>today:</h2>
+    <figure>
+      <img data-conditionImage='day1'>
+      <figcaption data-conditionText='day1'></figcaption>
+    </figure>
     <dl>
       <dt>average humidity</dt>
       <dd data-avgHumidity='day1'></dd>
@@ -45,6 +49,10 @@
   <article>
     <div>
       <p><span id='temperature'></span></p>
+      <figure>
+        <img data-conditionImage='day2'>
+        <figcaption data-conditionText='day2'></figcaption>
+      </figure>
       <dl>
         <dt>average humidity</dt>
         <dd data-avgHumidity='day2'></dd>
@@ -65,6 +73,10 @@
 
     <div>
       <p><span id='temperature'></span></p>
+      <figure>
+        <img data-conditionImage='day3'>
+        <figcaption data-conditionText='day3'></figcaption>
+      </figure>
       <dl>
         <dt>average humidity</dt>
         <dd data-avgHumidity='day3'></dd>
@@ -82,6 +94,9 @@
         <dd data-maxTemp='day3'></dd>
       </dl>
     </div>
+
+
+
   </article>
 
 </main>
