--- a/output/index.html
+++ b/output/index.html
@@ -5,7 +5,7 @@
   <title>the weather!</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="main-faf6736e7f8d2763ed68.js"></script></head>
+<script defer src="main-a0bd09a731a8b3a9f811.js"></script></head>
 
 <form>
   <label for="locationSearch">seach the location</label>
@@ -21,6 +21,10 @@
 
   <article>
     <h2>today:</h2>
+    <figure>
+      <img data-conditionImage='day1'>
+      <figcaption data-conditionText='day1'></figcaption>
+    </figure>
     <dl>
       <dt>average humidity</dt>
       <dd data-avgHumidity='day1'></dd>
@@ -45,6 +49,10 @@
   <article>
     <div>
       <p><span id='temperature'></span></p>
+      <figure>
+        <img data-conditionImage='day2'>
+        <figcaption data-conditionText='day2'></figcaption>
+      </figure>
       <dl>
         <dt>average humidity</dt>
         <dd data-avgHumidity='day2'></dd>
@@ -65,6 +73,10 @@
 
     <div>
       <p><span id='temperature'></span></p>
+      <figure>
+        <img data-conditionImage='day3'>
+        <figcaption data-conditionText='day3'></figcaption>
+      </figure>
       <dl>
         <dt>average humidity</dt>
         <dd data-avgHumidity='day3'></dd>
@@ -82,6 +94,9 @@
         <dd data-maxTemp='day3'></dd>
       </dl>
     </div>
+
+
+
   </article>
 
 </main>
