display the location

--- a/input/index.html
+++ b/input/index.html
@@ -9,7 +9,7 @@
 
 <form>
   <label for="locationSearch">seach the location</label>
-  <input type="search" id="locationSearch">
+  <input type="search"  id="locationSearch">
   <button type="button">search</button>
 </form>
 
@@ -41,7 +41,7 @@
       </dt>
       <dd data-maxTemp='day1'></dd>
     </dl>
-    <button>switch to Fahrenheit</button>
+    <button>Switch To Fahrenheit</button>
   </article>
 
 
