display the location

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <title>the weather!</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="main-a0bd09a731a8b3a9f811.js"></script></head>
+<script defer src="main-ca058009b203460ad142.js"></script></head>
 
 <form>
   <label for="locationSearch">seach the location</label>
-  <input type="search" id="locationSearch">
+  <input type="search"  id="locationSearch">
   <button type="button">search</button>
 </form>
 
@@ -41,7 +41,7 @@
       </dt>
       <dd data-maxTemp='day1'></dd>
     </dl>
-    <button>switch to Fahrenheit</button>
+    <button>Switch To Fahrenheit</button>
   </article>
 
 
