--- a/output/index.html
+++ b/output/index.html
@@ -9,7 +9,7 @@
 
 <form>
   <label for="locationSearch">seach the location</label>
-  <input type="search"  id="locationSearch">
+  <input list='locations' type="search"  id="locationSearch">
   <button type="button">search</button>
 </form>
 
@@ -100,6 +100,18 @@
   </article>
 
 </main>
+  
+
+  <datalist id='locations'>
+    <option value="buenos aires"></option>
+    <option value="new york"></option>
+    <option value="london"></option>
+    <option value="new mexico"></option>
+    <option value="kyoto"></option>
+    <option value="paris"></option>
+    <option value="berlin"></option>
+    <option value="california"></option>
+  </datalist>
 
 <body>
 </body>
