make the styling a bit better

--- a/input/index.html
+++ b/input/index.html
@@ -6,13 +6,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
+<header>
 <form>
-  <label for="locationSearch">seach the location</label>
+  <label for="locationSearch">location:</label>
   <input list='locations' type="search"  id="locationSearch">
   <button type="button">search</button>
 </form>
-
+</header>
 <main>
 
   <article>
@@ -43,7 +43,6 @@
     </dl>
     <button>Switch To Fahrenheit</button>
   </article>
-
 
 
   <article>
