--- a/output/index.html
+++ b/output/index.html
@@ -5,14 +5,14 @@
   <title>the weather!</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="main-ca058009b203460ad142.js"></script></head>
-
+<script defer src="main-e76cc2873a92e5a610ea.js"></script></head>
+<header>
 <form>
-  <label for="locationSearch">seach the location</label>
+  <label for="locationSearch">location:</label>
   <input list='locations' type="search"  id="locationSearch">
   <button type="button">search</button>
 </form>
-
+</header>
 <main>
 
   <article>
@@ -43,7 +43,6 @@
     </dl>
     <button>Switch To Fahrenheit</button>
   </article>
-
 
 
   <article>
