add current temperature

--- a/input/index.html
+++ b/input/index.html
@@ -25,6 +25,11 @@
       <img data-conditionImage='day1'>
       <figcaption data-conditionText='day1'></figcaption>
     </figure>
+
+      <div>
+        <h2>actual <span title='actual temperature' id='currentTemp'></span>/<span title='temperature feeling' id='tempFeeling'></span> feels</h2>
+      </div>
+
     <dl>
       <dt>average humidity</dt>
       <dd data-avgHumidity='day1'></dd>
