--- a/output/index.html
+++ b/output/index.html
@@ -5,7 +5,7 @@
   <title>the weather!</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="main-d147caa9f5a6bab1202e.js"></script></head>
+<script defer src="main-a5d31567b84780c7892b.js"></script></head>
 <header>
 <form>
   <label for="locationSearch">location:</label>
@@ -25,6 +25,11 @@
       <img data-conditionImage='day1'>
       <figcaption data-conditionText='day1'></figcaption>
     </figure>
+
+      <div>
+        <h2>actual <span title='actual temperature' id='currentTemp'></span>/<span title='temperature feeling' id='tempFeeling'></span> feels</h2>
+      </div>
+
     <dl>
       <dt>average humidity</dt>
       <dd data-avgHumidity='day1'></dd>
